Cherry-pick ffd8a014dd11. rdar://116349535

REGRESSION (267023@main): The language switching menu is broken on English Wikipedia
    https://bugs.webkit.org/show_bug.cgi?id=262358

    Reviewed by Wenson Hsieh.

    The bug was caused by EventLoop::hasTasksForFullyActiveDocument returning true when there are pending tasks
    for suspended documents (in back-forward cache). This resulted in WindowEventLoop::didReachTimeToRun() to
    exit early before running idle callbacks. Fixed the bug by making hasTasksForFullyActiveDocument return true
    only when there are pending tasks for non-suspended task groups.

    * LayoutTests/requestidlecallback/requestidlecallback-in-page-cache-with-pending-task-expected.txt: Added.
    * LayoutTests/requestidlecallback/requestidlecallback-in-page-cache-with-pending-task.html: Added.
    * LayoutTests/requestidlecallback/resources/page-cache-with-pending-task.html: Added.

    * Source/WebCore/dom/EventLoop.cpp:
    (WebCore::EventLoop::hasTasksForFullyActiveDocument const): Fixed the bug.
    * Source/WebCore/dom/EventLoop.h:
    (WebCore::EventLoop::hasTasksForFullyActiveDocument const): Moved to the cpp file above.

    Canonical link: https://commits.webkit.org/268782@main

Identifier: 267815.217@safari-7617-branch